--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coba Git</title>
 </head>
+<style>
+    body{background-color: gray;}
+</style>
 <body>
     <h1>Hello Word</h1>
 </body>
